[package]
name = "euler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
num-bigint = "*"
primes = "*"
numerics = "*"

[[bin]]
name = "problem11"
path = "src/problem11.rs"

[[bin]]
name = "problem12"
path = "src/problem12.rs"

[[bin]]
name = "problem13"
path = "src/problem13.rs"

[[bin]]
name = "problem14"
path = "src/problem14.rs"

[[bin]]
name = "problem15"
path = "src/problem15.rs"

[[bin]]
name = "problem16"
path = "src/problem16.rs"

[[bin]]
name = "problem17"
path = "src/problem17.rs"
